@@ -1,15 +1,9 @@
 #
 # General configuration
 #
-# xserver = X server to run (FIXME)
-# default-xserver-command = Default X server command (FIXME)
-# log-directory = Directory to log information to
-# theme-directory = Directory to load themes from
-# theme-engine-directory = Directory to load theme engines from
+# xserver = X server to run
+# default-xserver-command = Default X server command
 # default-greeter-theme = Default greeter theme to use
-# run-directory = Directory to put running state in
-# cache-directory = Directory to cache to
-# xsessions-directory = Directory to find X sessions
 # default-xsession Default X session to use
 # session-wrapper = Program to run sessions through
 # minimum-display-number = Minimum display number to use for X servers
@@ -20,19 +14,31 @@
 [LightDM]
 #xserver=default-xserver
 #default-xserver-command=
-#log-directory=/var/log/lightdm
-#theme-directory=/usr/share/lightdm/themes
-#theme-engine-directory=/usr/libexec/lightdm
 #default-greeter-theme=
-#run-directory=/var/run/lightdm
-#cache-directory=/var/cache/lightdm
-#xsessions-directory=/usr/share/xsessions
 #default-xsession=
 #session-wrapper=/etc/X11/Xsession
 #minimum-display-number=0
 #minimum-vt=7
 #user-authority-in-system-dir=false
 seats=seat-0
+
+#
+# Directory configuration
+#
+# log-directory = Directory to log information to
+# theme-directory = Directory to load themes from
+# theme-engine-directory = Directory to load theme engines from
+# run-directory = Directory to put running state in
+# cache-directory = Directory to cache to
+# xsessions-directory = Directory to find X sessions
+#
+#[directories]
+#log-directory=/var/log/lightdm
+#theme-directory=/usr/share/lightdm/themes
+#theme-engine-directory=/usr/libexec/lightdm
+#run-directory=/var/run/lightdm
+#cache-directory=/var/cache/lightdm
+#xsessions-directory=/usr/share/xsessions
 
 #
 # X server configuration
@@ -52,7 +58,6 @@ seats=seat-0
 # session = Default session
 # default-user = Username of default user to log in as
 # default-user-timeout = Delay before logging in in seconds (use 0 for automatic login)
-# pam-service = PAM service to use
 # xserver = X server to use
 # xdmcp-manager = XDMCP manager to connect to
 # xdmcp-port = XDMCP UDP/IP port to communicate on
@@ -64,8 +69,6 @@ seats=seat-0
 #session=gnome
 #default-user=bob
 #default-user-timeout=5
-#default-user-session=
-#pam-service=lightdm
 #xserver=
 #xdmcp-manager=
 #xdmcp-port=177
