@@ -23,7 +23,7 @@ load_theme (const gchar *name, GError **error)
     GKeyFile *theme;
     gboolean result;
 
-    theme_dir = config_get_string (config_get_instance (), "LightDM", "theme-directory");
+    theme_dir = config_get_string (config_get_instance (), "directories", "theme-directory");
     path = g_build_filename (theme_dir, name, "index.theme", NULL);
     g_free (theme_dir);
 
@@ -56,7 +56,7 @@ theme_get_command (GKeyFile *theme)
 
     /* FIXME: This is perhaps unsafe - 'engine' could contain a relative path, e.g. "../../../run_something_malicious".
      * Perhaps there should be a check for this or the engines need a file like /usr/share/lightdm/engines/foo.engine */
-    engine_dir = config_get_string (config_get_instance (), "LightDM", "theme-engine-directory");
+    engine_dir = config_get_string (config_get_instance (), "directories", "theme-engine-directory");
     command = g_build_filename (engine_dir, engine, NULL);
     g_free (engine_dir);
     g_free (engine);
